2019-01-02

- added consul-config to consul-wrapper
  - supports consuming terraform outputs as consul configuration parameters
- renamed consul related param vars to CT_CONSUL_

2018-12-28

- added output tasks

2018-12-27

- added plugin caching
- added auxiliary inputs

2018-12-15

- add {tf-cmd}-consul.yaml tasks
- supports wrapping a terraform phase with a consul cluster join
- supports certificates through the CONCOURSE_TERRAFORM_CONSUL_ params