@@ -1,6 +1,6 @@
 MIT License
 
-Copyright (c) 2018 Snap Kitchen, LLC.
+Copyright (c) 2018-2019 Snap Kitchen, LLC.
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
