@@ -1,0 +1,5 @@
+{
+  "sensitive": false,
+  "type": "string",
+  "value": "RSA"
+}
